Make session new flag available for all requests.

--- a/src/request.rs.in
+++ b/src/request.rs.in
@@ -39,6 +39,9 @@ impl Request {
     pub fn locale(&self) -> &str {
         &self.locale
     }
+    pub fn session_new(&self) -> bool {
+        self.session.new
+    }
 }
 
 #[derive(Deserialize,Clone)]
